# cloud-volumetrics

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  shader.frag  shader.vert
.cache/clangd/index/: glad.c.CFC77B183556AE1A.idx  glad.h.20B5836AD307FBFA.idx  imconfig.h.3E9D6C834F71E2D5.idx  imgui.cpp.8CE8E31A69C6A54E.idx  imgui.h.CC5C1B619D44ADFF.idx  imgui_draw.cpp.111F316F2EE02591.idx  imgui_impl_glfw.cpp.8B973D5BE6717D59.idx  imgui_impl_glfw.h.2110BC3E84E074C9.idx  imgui_impl_opengl3.cpp.A31959F4744B2CF9.idx  imgui_impl_opengl3.h.0014C3129495802C.idx  imgui_impl_opengl3_loader.h.B9DA029EB1313BF5.idx  imgui_internal.h.E8DB0239A9205B78.idx  imgui_tables.cpp.44FE4AE63CCF4CA6.idx  imgui_widgets.cpp.C43A20C8B32AFBE3.idx  imstb_rectpack.h.AF74632BCC76CFE7.idx  imstb_textedit.h.23125DE578B2F19A.idx  imstb_truetype.h.A11AC87680FBB8A4.idx  khrplatform.h.63FBA7EA558EF2F8.idx  main.cpp.9E236526C6BF1EFD.idx
src/: main.cpp
